# order-flow-lab

./: .gitignore  Procfile  dashboard.py  nixpacks.toml  push_to_github.sh  pyproject.toml  railway.json  requirements.txt
src/order_flow_lab/: __init__.py  backtest.py  book.py  data_loader.py  features.py  strategy.py  viz.py
tests/: conftest.py  test_book.py  test_features.py  test_strategy.py
