[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "order-flow-lab"
version = "0.1.0"
description = "Order Flow Analyzer estilo Bookmap para ES/NQ — VWAP Deviation Stop-Hunt Reversal strategy"
requires-python = ">=3.11"
dependencies = [
    "databento>=0.43.0",
    "polars>=1.0.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "holoviews>=1.19.0",
    "datashader>=0.16.0",
    "bokeh>=3.4.0",
    "panel>=1.4.0",
    "colorcet>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
